--- a/templates/partials/weekPanel.hbs
+++ b/templates/partials/weekPanel.hbs
@@ -3,6 +3,7 @@
     - It exists in the context of "Week"
     - Used on the Home Page
 }}
+<script src="/{{base_url}}assets/js/timetable.js"></script>
 <!-- Table -->
 <table class="timetable" width="100%">
     <thead>
@@ -19,7 +20,7 @@
             <th class="time" rowspan="2">{{to12hour this}}</th>{{#each ../days}}
             <td class="{{#if (equals @key ../../today)}}today{{else}} {{#unless (or (equals @key (offsetDay ../../today 1)) (equals @key (offsetDay ../../today 2)))}}hidden-xs{{/unless}}{{/if}}">
                 {{#with (lookup (lookup ../../user.courses.semesters.[0].schedule @key) (toFixed (add ../this -0.5) 1))}}
-                {{>timetableEvent course=(lookup ../../../user.courses.semesters.[0].courses course)}}
+                {{>timetableEvent course=(lookup ../../../user.courses.semesters.[0].courses course) day=../this time=(add ../../this -0.5)}}
                 {{else}}
                 <div class="fill"></div>
                 {{/with}}
@@ -29,7 +30,7 @@
         <tr>{{#each ../days}}
             <td class="{{#if (equals @key ../../today)}}today{{else}} {{#unless (or (equals @key (offsetDay ../../today 1)) (equals @key (offsetDay ../../today 2)))}}hidden-xs{{/unless}}{{/if}}">
                 {{#with (lookup (lookup ../../user.courses.semesters.[0].schedule @key) (toFixed ../this 1))}}
-                {{>timetableEvent course=(lookup ../../../user.courses.semesters.[0].courses course)}}
+                {{>timetableEvent course=(lookup ../../../user.courses.semesters.[0].courses course) day=../this time=../../this}}
                 {{else}}
                 <div class="fill"></div>
                 {{/with}}
