Fix link to scripts

--- a/templates/partials/weekPanel.hbs
+++ b/templates/partials/weekPanel.hbs
@@ -3,7 +3,7 @@
     - It exists in the context of "Week"
     - Used on the Home Page
 }}
-<script src="/{{base_url}}assets/js/timetable.js"></script>
+<script src="/{{global.base_url}}assets/js/timetable.js"></script>
 <!-- Table -->
 <table class="timetable" width="100%">
     <thead>
