--- a/templates/partials/weekPanel.hbs
+++ b/templates/partials/weekPanel.hbs
@@ -9,7 +9,7 @@
     <thead>
     <tr>
         <th width="10%"><i class="fa fa-clock-o"></i></th>{{#each days}}
-        <th width="18%" class="{{#if (equals @key ../today)}}today{{else}} {{#unless (or (equals @key (offsetDay ../today 1)) (equals @key (offsetDay ../today 2)))}}hidden-xs{{/unless}}{{/if}}">
+        <th width="18%" class="{{#if (equals @key ../today)}}today{{else}}{{#unless (equals @key (offsetDay ../today 1))}}hidden-xs{{/unless}}{{/if}}">
             {{short}}
         </th>{{/each}}
     </tr>
@@ -18,7 +18,7 @@
         {{! Half Hour }}
         <tr class="half-hour">
             <th class="time" rowspan="2">{{to12hour this}}</th>{{#each ../days}}
-            <td class="{{#if (equals @key ../../today)}}today{{else}} {{#unless (or (equals @key (offsetDay ../../today 1)) (equals @key (offsetDay ../../today 2)))}}hidden-xs{{/unless}}{{/if}}">
+            <td class="{{#if (equals @key ../../today)}}today{{else}}{{#unless (equals @key (offsetDay ../../today 1))}}hidden-xs{{/unless}}{{/if}}">
                 {{#with (lookup (lookup ../../user.courses.semesters.[0].schedule @key) (toFixed (add ../this -0.5) 1))}}
                 {{>timetableEvent course=(lookup ../../../user.courses.semesters.[0].courses course) day=../this time=(add ../../this -0.5)}}
                 {{else}}
@@ -28,7 +28,7 @@
         </tr>
         {{! Hour }}
         <tr>{{#each ../days}}
-            <td class="{{#if (equals @key ../../today)}}today{{else}} {{#unless (or (equals @key (offsetDay ../../today 1)) (equals @key (offsetDay ../../today 2)))}}hidden-xs{{/unless}}{{/if}}">
+            <td class="{{#if (equals @key ../../today)}}today{{else}}{{#unless (equals @key (offsetDay ../../today 1))}}hidden-xs{{/unless}}{{/if}}">
                 {{#with (lookup (lookup ../../user.courses.semesters.[0].schedule @key) (toFixed ../this 1))}}
                 {{>timetableEvent course=(lookup ../../../user.courses.semesters.[0].courses course) day=../this time=../../this}}
                 {{else}}
