--- a/templates/partials/subnav.hbs
+++ b/templates/partials/subnav.hbs
@@ -1,7 +1,21 @@
-<ul class="nav nav-pills">{{#each section.subsections}}
-    <li {{#if (equals this ../page)}}class="active"{{/if}}>
-        <a {{#unless (equals this ../page)}}href="/{{../base_url}}{{../user.path}}{{../section.path}}{{path}}"{{/unless}}>
-            {{title}}
-        </a>
-    </li>{{/each}}
-</ul>
+<div class="row">
+    <div class="col-md-10">
+        <ul class="nav nav-pills">{{#each section.subsections}}
+            <li {{#if (equals this ../page)}}class="active"{{/if}}>
+                <a {{#unless (equals this ../page)}}href="/{{../base_url}}{{../user.path}}{{../section.path}}{{path}}"{{/unless}}>
+                    {{title}}
+                </a>
+            </li>{{/each}}
+        </ul>
+    </div>
+{{#if page.semester_switch}}
+    <div class="col-md-2">
+        <select class="form-control">
+            <option>Spring 2016</option>
+            <option>Fall 2015</option>
+            <option>Spring 2015</option>
+            <option>Fall 2014</option>
+        </select>
+    </div>
+</div>
+{{/if}}
