Add switching for table

--- a/assets/sass/pages/_semester.scss
+++ b/assets/sass/pages/_semester.scss
@@ -6,3 +6,15 @@
     visibility: visible;
   }
 }
+
+table.semester-switch {
+  > tbody {
+    > tr {
+      cursor: pointer;
+      &.active {
+        cursor: default;
+      }
+    }
+  }
+
+}
