--- a/templates/records/verification.hbs
+++ b/templates/records/verification.hbs
@@ -11,7 +11,7 @@
         <div class="panel panel-default">
             <table class="table table-hover" width="100%">
                 <tbody>
-                <tr>{{#each user.records.grades}}
+                <tr>{{#each user.records.semesters}}
                         <td width="35%">
                             <h4>{{semester}}</h4>
                         </td>
