--- a/assets/sass/partials/_navs.scss
+++ b/assets/sass/partials/_navs.scss
@@ -19,7 +19,7 @@
     > a {
       position: relative;
       display: block;
-      padding: $nav-link-padding;
+      padding: $nav-link-padding-base-vertical $nav-link-padding-base-horizontal;
       &:hover,
       &:focus {
         text-decoration: none;
@@ -247,6 +247,9 @@ $white: #ffffff;
     // Links rendered as pills
     > a {
       border-radius: $nav-pills-border-radius;
+      @media (max-width: $screen-xs-max) {
+        padding: $nav-link-padding-small-vertical $nav-link-padding-small-horizontal;
+      }
     }
     + li {
       margin-left: 2px;
