--- a/templates/records/grades.hbs
+++ b/templates/records/grades.hbs
@@ -7,33 +7,7 @@
         - Keep the data organized, if you're adding financial data put it under "finances"
     }}
     <div class="col-md-8">
-        {{#each user.records.semesters}}
-            <div id="{{#replace " " "-"}}{{semester}}{{/replace}}" class="semester {{#if (equals @index 0)}}active{{/if}}">
-                <h3>{{semester}}</h3>
-                <p>
-                    <span class="text-muted">Semester GPA </span><span class="badge">{{semester_GPA}}</span>
-                </p>
-                <div class="panel panel-default">
-                    <!-- Grade Table -->
-                    <table class="table">
-                        <thead>
-                        <tr>
-                            <th>Course</th>
-                            <th>Percent</th>
-                            <th>Letter Grade</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr>{{#each courses}}
-                                <td>{{code}} {{number}}</td>
-                                <td>{{percent}}</td>
-                                <td>{{letter}}</td>
-                            </tr>{{/each}}
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        {{/each}}
+        {{> gradeTable}}
     </div>
 </div>
 {{/default}}
