--- a/templates/records/grades.hbs
+++ b/templates/records/grades.hbs
@@ -1,5 +1,5 @@
 {{#>default section=sections.records page=sections.records.subsections.grades}}
-<div style="min-height: 60vh;">
+<div class="row" style="min-height: 60vh;">
     {{! This is the starter for a section page
         -------------------------------------------------------
         - The tag at the top brings in the default portions
@@ -7,7 +7,17 @@
         - Keep the data organized, if you're adding financial data put it under "finances"
     }}
     <div class="col-md-8">
-        {{> gradeTable}}
+        {{#each user.records.semesters}}
+                <div id="{{#replace " " "-"}}{{semester}}{{/replace}}" class="semester {{#if (equals @index 0)}}active{{/if}}">
+                    <h3>{{semester}}</h3>
+                    <p>
+                        <span class="text-muted">Semester GPA </span><span class="badge">{{semester_GPA}}</span>
+                    </p>
+                    <div class="panel panel-default">
+                        {{> gradeTable static=false}}
+                    </div>
+                </div>
+        {{/each}}
     </div>
 </div>
 {{/default}}
