--- a/templates/courses/timetable.hbs
+++ b/templates/courses/timetable.hbs
@@ -9,6 +9,8 @@
     {{! Access the page context with `page` (see globals.json)}}
     <h2>{{page.title}}</h2>
     {{! Access the page context with `user` (see amy.json)}}
-    <p>{{user.content}}</p>
+    <div class="panel panel-default">
+        {{> weekPanel user=user today=environment.today.day global=this}}
+    </div>
 </div>
 {{/default}}
