--- a/templates/courses/Graduation.hbs
+++ b/templates/courses/Graduation.hbs
@@ -9,6 +9,14 @@
     {{! Access the page context with `page` (see globals.json)}}
     <h2>{{page.title}}</h2>
     {{! Access the page context with `user` (see amy.json)}}
-    <p>{{user.content}}</p>
+    <p>You're this done!</p>
+    <div class="progress">
+        <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 62.5%;">
+            62.5%
+        </div>
+    </div>
+    <div class="btn-group" role="group" aria-label="graduation">
+        <button type="button" class="btn btn-default">Apply for graduation</button>
+    </div>
 </div>
 {{/default}}
