--- a/templates/courses/program.hbs
+++ b/templates/courses/program.hbs
@@ -10,19 +10,19 @@
     <h2>{{page.title}}</h2>
     {{! Access the page context with `user` (see amy.json)}}
     <div class="panel panel-default">
-        <table class="table table-striped">
+        <table class="table table-striped" width="100%">
             <thead>
                 <tr>
-                    <th></th>
-                    <th>Spring</th>
-                    <th>Summer</th>
-                    <th>Fall</th>
+                    <th width="10%"></th>
+                    <th width="30%" >Spring</th>
+                    <th width="30%">Summer</th>
+                    <th width="30%">Fall</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>{{#each user.courses.program.years}}
-                    <td>{{year}}</td>
-                    {{#each semesters}}<td>
+                    <th class="text-center">{{year}}</th>{{#each semesters}}
+                    <td>
                         <ul class="list-group">{{#each courses}}
                             <li class="list-group-item list-group-item-{{#if complete}}success{{else}}info{{/if}}">{{code}} {{number}}</li>{{/each}}
                         </ul>
