--- a/templates/courses/graduation.hbs
+++ b/templates/courses/graduation.hbs
@@ -1,22 +1,31 @@
 {{#>default section=sections.courses page=sections.courses.subsections.graduation}}
 <div style="min-height: 60vh;">
-    {{! This is the starter for a section page
-        -------------------------------------------------------
-        - The tag at the top brings in the default portions
-        - Data comes in from JSON files, please put all data/strings in the JSON files
-        - Keep the data organized, if you're adding financial data put it under "finances"
-    }}
-    {{! Access the page context with `page` (see globals.json)}}
-    <h2>{{page.title}}</h2>
-    {{! Access the page context with `user` (see amy.json)}}
-    <p>You're this done!</p>
-    <div class="progress">
-        <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 62.5%;">
-            62.5%
+    <div class="row">
+        <div class="col-md-8">
+            <h2>{{page.title}}</h2>
+            <p>You're this done!</p>
         </div>
     </div>
-    <div class="btn-group" role="group" aria-label="graduation">
-        <button type="button" class="btn btn-default">Apply for graduation</button>
-    </div>
+    {{#with user.courses.graduation}}
+        <div class="row">
+            <div class="col-md-8">
+                <div class="progress">
+                    <div class="progress-bar" role="progressbar" aria-valuenow="{{progress}}" aria-valuemin="0"
+                         aria-valuemax="100" style="width: {{progress}}%;">
+                            {{progress}}&percnt;
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-8">
+                <button type="button" class="btn btn-primary btn-block"
+                        {{#unless (equals progress 100)}}disabled{{/unless}}>
+                    Apply for graduation
+                </button>
+            </div>
+        </div>
+    {{/with}}
 </div>
 {{/default}}
