--- a/static/assets/css/report.css
+++ b/static/assets/css/report.css
@@ -6,6 +6,12 @@ body {
   color: #5a5a5a;
 }
 
+/* Typography
+-------------------------------------------------- */
+p {
+  font-size: 18px;
+}
+
 /* CUSTOMIZE THE HEADER
 -------------------------------------------------- */
 /* Header base class */
@@ -51,6 +57,12 @@ h1 small {
 .featurette-divider {
   margin: 80px 0;
   /* Space out the Bootstrap <hr> more */
+}
+
+.featurette-video {
+  text-align: center;
+  width: 100%;
+  frameborder: 0;
 }
 
 /* Thin out the marketing headings */
