--- a/static/assets/sass/report.scss
+++ b/static/assets/sass/report.scss
@@ -68,6 +68,12 @@ h1 {
   margin: 80px 0; /* Space out the Bootstrap <hr> more */
 }
 
+.featurette-video {
+  text-align:center;
+  width: 100%;
+  frameborder: 0;
+}
+
 /* Thin out the marketing headings */
 .featurette-heading {
   font-weight: 300;
