Add one persona

--- a/static/assets/sass/report.scss
+++ b/static/assets/sass/report.scss
@@ -43,22 +43,14 @@ h1 {
   }
 }
 
-/* MARKETING CONTENT
--------------------------------------------------- */
 
-/* Center align the text within the three columns below the carousel */
-.marketing .col-lg-4 {
-  margin-bottom: 20px;
-  text-align: center;
-}
 
-.marketing h2 {
-  font-weight: normal;
-}
+/* Misc
+------------------------- */
 
-.marketing .col-lg-4 p {
-  margin-right: 10px;
-  margin-left: 10px;
+.img-center{
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* Featurettes
