--- a/static/assets/sass/report.scss
+++ b/static/assets/sass/report.scss
@@ -5,16 +5,19 @@
 body {
   padding-bottom: 40px;
   color: #5a5a5a;
+  line-height: 1.5;
 }
 
 /* Typography
 -------------------------------------------------- */
 
 h2 {
-
+  margin-top: 30px;
+  margin-bottom: 20px;
 }
 p {
   font-size: 18px;
+  margin-bottom: 30px;
 }
 
 /* CUSTOMIZE THE HEADER
@@ -49,8 +52,13 @@ h1 {
 ------------------------- */
 
 .img-center{
-  margin-left: auto;
-  margin-right: auto;
+  display: block;
+  margin: 0 auto;
+}
+
+.figure {
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
 
 /* Featurettes
