--- a/static/assets/sass/report.scss
+++ b/static/assets/sass/report.scss
@@ -25,7 +25,8 @@ p {
 
 /* Header base class */
 header {
-  height: 500px;
+  height: 600px;
+  height: 80vh;
   margin-bottom: 60px;
   padding-top: 200px;
   min-width: 100%;
@@ -34,15 +35,29 @@ header {
 
   background-position: center center;
   background-size: cover;
+
+
+  h1 {
+    text-align: center;
+    color: #fff;
+    font-size: 96px;
+  }
+
+  h2 {
+    color: #ccc;
+    font-size: 24px;
+  }
 }
 
-h1 {
-  text-align: center;
-  color: #fff;
-  font-size: 6vw;
-  small {
-    color: #ccc;
-    font-size: 2vw;
+
+.modal-content {
+  overflow: hidden;
+
+  iframe {
+    width: 100%;
+    height: 400px;
+    height: 60vh;
+    margin-bottom: -6px;
   }
 }
 
@@ -82,11 +97,6 @@ h1 {
   margin: 80px 0; /* Space out the Bootstrap <hr> more */
 }
 
-.featurette-video {
-  text-align:center;
-  width: 100%;
-  frameborder: 0;
-}
 
 /* Thin out the marketing headings */
 .featurette-heading {
